1.3.0rc26/_sources/features/kvcache.md.txt
# KV Cache System

The KV cache stores previously computed key-value pairs for reuse during generation in order to avoid redundant calculations. The TensorRT LLM KV cache system also supports reuse across requests and uses a suite of tools like offloading and prioritized eviction to increase reuse. It supports variable attention window sizes and Multi-Head Attention (MHA) optimization techniques such as MQA and GQA.

## The Basics

The KV cache is a pool of blocks that can hold KV state for a fixed number of tokens. Multiple layers are packed within a single block, which requires all the layers to have the same number of heads and the same attention window size. A separate pool is created for each combination of attention window size and number of heads to support variable attention window size and optimization techniques like GQA.

The number of tokens that can be stored in a single block can be set by user when the model engine is created. It must be a power of two greater than 1. Blocks are assigned to requests as needed. Blocks are stored in a search structure as they are filled by requests, this allows later requests to reuse KV state if they have a matching prefix.

If more than one pool is created, available memory is divided among the pools. The fraction to assign to each pool is determined during initialization and is static. This is not optimal and we are working on providing a better solution.

## Reuse Across Requests

Blocks containing KV state computed for previous requests are stored in a radix search tree as soon as they are filled. A search is performed when a new request is added, and matched blocks are reused instead of calculated. Blocks that are reused can be shared among multiple requests, so reuse saves memory as well as computations.

Blocks remain reusable until they are evicted from the search tree. Eviction happens when a new (blank) block is needed. The core eviction scheme is prioritized LRU. All blocks are assigned a priority between 0 and 100 (100 being most important). All blocks of the lowest priority must be evicted before any blocks of the next priority can be evicted. If all blocks have the same priority, the least recently used block is evicted.

When a block is evicted from primary memory, its KV state is copied to a block in secondary memory. The secondary memory block remains in the search tree, so the block remains reusable until it is evicted from secondary memory. Eviction from secondary memory happens when a new block in secondary memory is needed to offload a primary block. The eviction scheme is the same for primary and secondary blocks.

One caveat in the current code is that only leaf blocks can be evicted (leaves are blocks with no descendants in the radix tree). This design works well for full attention layers, but not for limited attention layers. This will be fixed in a future version.

### Retention Policy

Blocks are assigned priority in line with the [retention policy](https://nvidia.github.io/TensorRT-LLM/llm-api/reference.html#tensorrt_llm.llmapi.KvCacheRetentionConfig) of the request. Blocks with lower priority scores will be freed preferentially to blocks with higher priority. The retention policy is a list of [TokenRangeRetentionConfig](https://nvidia.github.io/TensorRT-LLM/llm-api/reference.html#tensorrt_llm.llmapi.KvCacheRetentionConfig.TokenRangeRetentionConfig) objects, each specifying priority for a given range of tokens, such as "assign priority X to tokens 10 through 61". You can also assign a duration in milliseconds for this to remain in effect. Priority reverts to the default of 35 after a period of ```duration_ms``` has elapsed from the first time the block was made available for reuse. TokenRangeRetentionConfig only applies to input (prompt) tokens. The property ```decode_retention_policy``` specifies what priority to assign to blocks with generated (decoded) tokens and ```decode_duration_ms``` specifies how long this should remain in effect. Priority reverts to the default after expiration. Any property that expects a duration can be set to None. This indicates that particular part of the retention policy never expires.

Not in use: ```transfer_mode``` is a debug option and should not be used.

See [this example](../examples/kvcacheretentionconfig.md) for an example of how to change block priorities of specific requests by altering their retention policy.

### Speculative Decoding

Reuse across requests is supported by all speculative decoding models. Please see [speculative decoding](speculative-decoding.md) for more details.

## Limited Attention Window Size

TensorRT LLM takes advantage of layers with limited attention window size in order to reduce computations and memory usage. Blocks that leave the attention window are freed and placed on the radix search tree so they can be reused.

## MQA / GQA

TensorRT LLM takes advantage of grouped query attention in order to save memory. KV cache will create blocks with only enough space to store state for the discrete query head groups. For MHA, there is one group per head, for MQA there is a single group for all the heads. GQA strikes a balance between these two.

## Controlling KV Cache Behavior

Many of the features in the KV cache system are optional or have user defined properties that alter how they work. Users can control KV cache features through class [KVCacheConfig](https://nvidia.github.io/TensorRT-LLM/llm-api/reference.html#tensorrt_llm.llmapi.KvCacheConfig). The remainder of this section describes how to change the most important behaviors of the KV cache system.

See [this example](../examples/kvcacheconfig.md) for an example of how to use KvCacheConfig to control KV cache behavior.

### Datatype

Perhaps the most important property is ```dtype``` which specifies what data type is held in KV cache. The default 'auto' specifies that data type should be inferred from model config.

### How Much Memory is Allocated to KV Cache

Property ```free_gpu_memory_fraction``` is a ratio > 0 and < 1 that specifies how much of free GPU memory should be allocated to KV cache. The default is 90% (ratio of 0.9). If ```max_tokens``` is also set, KV cache will determine how much memory is needed to hold ```max_tokens``` and will allocate the lesser of ```max_tokens``` and ```free_gpu_memory_fraction```.

### Enable/Disable Cross Request Reuse

Block reuse across requests is enabled by default, but can be disabled by setting ```enable_block_reuse``` to False.

`scheduler_config.enable_prefix_aware_scheduling` controls only scheduler-side use of prefix-reuse estimates. When it is
`True` (the default), schedulers can use estimated reusable KV tokens to defer duplicate first-chunk context requests and
to reduce token-budget accounting for requests that are expected to reuse cached prefix blocks. When it is `False`,
these scheduler estimates are disabled and reusable-token estimates remain zero, but actual KV block reuse is still
controlled by `kv_cache_config.enable_block_reuse`.

For example, this keeps runtime KV block reuse enabled while disabling prefix-aware scheduler admission and token-budget
credit:

```yaml
kv_cache_config:
  enable_block_reuse: true
scheduler_config:
  enable_prefix_aware_scheduling: false
```

### Selecting the KV Cache Manager

TensorRT LLM ships two KV cache manager implementations. `use_kv_cache_manager_v2`
selects between them and defaults to `auto`, which adopts the model's own
preference and falls back to the V1 C++ manager for models that do not declare
one. Set it to `true` or `false` to override the model default.

Models that select the V2 manager by default:

| Model | Reason |
| --- | --- |
| Hybrid Mamba (NemotronH, Qwen3-Next) | Attention KV and Mamba state pools must be sized together |
| DeepSeek-V4 | Sparse attention attaches auxiliary per-layer buffers |
| GPT-OSS | Sliding window on every other layer (VSWA), so the sliding-window and full-attention pools are sized independently |
| Gemma3 / Gemma4 (text and multimodal) | Alternating sliding-window and full-attention layers (VSWA); same independent pool sizing |

Separately, Gemma4 hybrid attention and sparse-attention models are routed to
V2 unconditionally: their per-layer buffer layouts cannot be represented by V1's
unified pool, so `use_kv_cache_manager_v2` does not apply to them.

Two-model speculative decoding (for example Eagle3 with
`eagle3_one_model=False`) is not supported by V2: the draft model runs in a
separate engine with its own KV cache manager, and V2 sizes both managers from
the full `max_gpu_total_bytes` budget instead of partitioning it between them.
Under `auto`, a model default of V2 falls back to V1 for that combination;
setting `use_kv_cache_manager_v2: true` explicitly raises an error. This
applies to every model that selects its manager through
`use_kv_cache_manager_v2`, not just GPT-OSS.

For the native V2 cold-storage representation and codec extension contract, see
[KVCacheManagerV2 Cold-Page Codec Design](../developer-guide/kv-cache-cold-page-codec.md).

### Mamba Snapshot Boundaries

Hybrid Mamba models must retain the recurrent Mamba state together with the
attention KV prefix. Snapshot policy is grouped under
`kv_cache_config.mamba_state_config`. `periodic_snapshot_interval` controls
periodic boundaries. They are disabled by default; set the interval to a
positive value to enable them. The deprecated
`kv_cache_config.mamba_state_cache_interval` alias remains accepted for
compatibility and is copied to the nested field during validation. New code and
configuration files should use the nested field. The prototype
`additional_snapshot_offsets_from_start` and
`additional_snapshot_offsets_from_end` options add fixed boundaries. Start
offsets count tokens from the beginning of the prompt. End offsets count
backward from the prompt end, and an end offset of `0` selects the final
prompt boundary. The `per_conversation` block reuse policy disables periodic
Mamba snapshots, so configure one or more explicit stable boundaries (usually
an end offset of `0`) when using it with a hybrid Mamba model. For example:

```yaml
kv_cache_config:
  enable_block_reuse: true
  use_kv_cache_manager_v2: true
  avg_seq_len: 2048
  block_reuse_config:
    policy: per_conversation
    max_num_turns: 2
  mamba_state_config:
    periodic_snapshot_interval: 0
    additional_snapshot_offsets_from_start: [128]
    additional_snapshot_offsets_from_end: [0, 32]
```

This retains snapshots after the first 128 tokens, at the end of the prompt,
and before the final 32 prompt tokens. Positions outside a particular prompt
are ignored. Set `avg_seq_len` to the workload's average total sequence length
so V2 can size the attention KV and Mamba state pools in the right proportion.
`pool_ratio` contains one positive, normalized cache-tier quota weight per
layer group in layer-group ID order.
If neither `avg_seq_len` nor an explicit `pool_ratio` is configured, hybrid
Mamba models warn and fall back to half of `max_seq_len`, which can produce a
suboptimal pool split. Exact explicit boundaries currently require
`MambaHybridCacheManagerV2`, `max_beam_width=1`, and no KV connector. Hybrid
Mamba models select V2 by default (see
[Selecting the KV Cache Manager](#selecting-the-kv-cache-manager)); set
`use_kv_cache_manager_v2` to `false` to select the V1 C++
compatibility manager. In disaggregated serving, V2 Mamba requires the Python
NIXL transceiver (`transceiver_runtime: PYTHON`); V1 routes support periodic
snapshots only.

### KV Cache Salting for Secure Reuse

KV cache salting provides a security mechanism to control which requests can reuse cached KV states. When a `cache_salt` parameter is provided with a request, the KV cache system will only allow reuse of cached blocks given the same cache salt value. This prevents potential security issues such as prompt theft attacks, where malicious users might try to infer information from cached states of other users' requests.

To use cache salting, specify the `cache_salt` parameter as a string when creating requests. Only requests with matching cache salt values can share cached KV blocks. The salt value can be any non-empty string, such as a user ID, tenant ID, or hash string.

This isolation is enforced entirely by the block-key hash: the salt is mixed into the hashed input and prefix matching is decided by digest equality alone (blocks are not re-compared token-by-token). The block-key hash is therefore required to be a cryptographic hash with strong collision resistance and a 256-bit digest (SHA-256 provides ~128-bit collision resistance, which is ample here); substituting a non-cryptographic hash would allow crafted collisions to bypass salt isolation and must not be done.

### Multimodal UUID Support for Cache Identification

When working with multimodal models (e.g., vision-language models), the KV cache system needs to identify which cached blocks correspond to which multimodal inputs (images, videos, etc.). By default, the system uses content-based hashing to generate unique identifiers for each multimodal input. However, this approach has limitations for cache management across sessions, as the same content must be re-processed to generate the same hash.

To enable deterministic cache management, you can provide custom UUID strings for your multimodal data using the `multi_modal_uuids` parameter when creating requests. When provided, these UUIDs are returned in KV cache events instead of computed content hashes, while the cache key itself is computed from **both** the UUID and content together for correctness.

**Usage Example:**

```python
from tensorrt_llm.inputs import TextPrompt

# Provide custom UUIDs for your images
prompt = TextPrompt(
    prompt="Describe these images.",
    multi_modal_data={"image": [image1, image2]},
    multi_modal_uuids={"image": ["image-uuid-001", "image-uuid-002"]}
)
```

**Key Features:**

- **Cache Correctness**: When a UUID is provided, the cache key is computed from both the UUID and content together using `BLAKE3(UUID || Content)`. This ensures different content always produces different cache entries, even with the same UUID.
- **User Isolation**: Same content with different UUIDs produces different cache entries, enabling per-user or per-session cache isolation.
- **Stable Event Identifiers**: The original UUID string is preserved and returned in KV cache events via `get_kv_cache_events()`, enabling deterministic external cache management.
- **Partial UUID Support**: You can provide UUIDs for some items and use `None` for others to fall back to content-only hashing.
- **Cross-Modality Support**: Different modalities (images, videos) can each have their own UUIDs.

**UUID Format:**

- Can be any string (e.g., "image-123", "user-session-img-a", database keys)
- Original UUID strings are preserved and returned in KV cache events


### Enable Offloading to Host Memory

Before a block is evicted from GPU memory, it can optionally be offloaded to host (CPU) memory. The block remains reusable until it is evicted from host memory. When an offloaded block is reused, it is first copied back into GPU memory. Offloading is controlled with property ```host_cache_size``` which specifies how much host memory (in bytes) should be allocated for offloading. The default is 0.

When offloading is enabled, the client can prevent specific blocks from being offloaded by toggling block priority. Blocks with lower priority than a certain threshold are not offloaded; they are evicted directly from GPU memory to reduce traffic between GPU and host. This priority is set with ```secondary_offload_min_priority```. Default value is 35, meaning any block with lower priority than 35 will not be offloaded.

Here is an [example](../../../examples/llm-api/llm_kv_cache_offloading.py) to show how to enable host offloading.

### Partial Reuse

Partial reuse of a block can happen when some but not all tokens are matched. It is enabled by default, but can be disabled by setting ```enable_partial_reuse``` to False.

The property ```copy_on_partial_reuse``` specifies whether a block should be copied or not in order to allow partial reuse. If copying is disabled, a partially matched block can only be reused if no other request is using it. If copying is enabled, partially matched blocks are not reused directly, instead a new block is created and the matched tokens are copied into the new block. This allows multiple requests to partially reuse a block.

### Attention Window Size

Property ```max_attention_window``` specifies the maximum attention window size for each layer in the model as a list of integer values. If the length of this list is less than number of layers, the list is repeated as many times as necessary. For instance, if the model has only full attention layers and maximum sequence length is 4096, you can specify this as ```max_attention_window = [4096]```. If the first layer is full attention, the second layer is limited attention with window size 256 and then this repeats for the remaining layers, you specify this as ```max_attention_window = [4096,256]```. This means first layer is full attention, second layer is limited attention, third layer is full attention, fourth layer is limited attention and so on.

### Deprecated Properties

Property ```use_uvm``` has been deprecated and will be removed in a future release.

Property ```sink_token_length``` is deprecated and silently ignored on the PyTorch backend.
The PyTorch attention kernels do not support StreamingLLM, so any non-``None`` value is
dropped before reaching the executor.
